--- a/templates/index.html
+++ b/templates/index.html
@@ -276,7 +276,7 @@
 
     <!-- Map Section -->
     <section class="map-section-mobile">
-        <img src="/static/images/mobile view locate us .webp" alt="Map Showing Projects">
+        <img src="/static/images/mobile_location.jpg" alt="Map Showing Projects">
     </section>
 
 
