--- a/templates/projects.html
+++ b/templates/projects.html
@@ -40,13 +40,13 @@
             <div class="project-details">
                 <h3 class="project-title">Shree Mahalakshmi Residency</h3>
                 <div class="project-location">
-                    <span class="project-location-icon">📍</span> Vile Parle
+                    <span class="project-location-icon">📍</span> Mahim West
                 </div>
                 <hr class="project-separator">
-                <p>Current Status: OnGoing Projects</p>
+                <p>Current Status: Final Completion Stage</p>
                 <br>
                 <div class="project-buttons">
-                    <a href="{{ url_for('maha_res_project') }}" class="view-details-btn">View Project Details</a>
+                    <a href="{{ url_for('maha_res_project')}}" class="view-details-btn">View Project Details</a>
                     <a href="{{ url_for('index') }}#contact-section" class="enquire-btn">Enquire</a>
                 </div>
             </div>
@@ -68,7 +68,7 @@
                 </div>
 
                 <hr class="project-separator">
-                <p>Current Status: OnGoing Projects</p>
+                <p>Current Status: 6 Slab Completed</p>
                 <br>
                 <div class="project-buttons">
                     <a href="{{ url_for('maha_kunj_project') }}" class="view-details-btn">View Project Details</a>
@@ -81,7 +81,7 @@
 <!--        Shree Mahalkshmi Trinity-->
         <div class="project-card">
             <div class="project-image-container">
-                <img src="{{ url_for('static', filename='images/project1.png') }}" alt="Shree Mahalkshmi Trinity" class="project-image">
+                <img src="{{ url_for('static', filename='projects/trinity/trinity.png') }}" alt="Shree Mahalkshmi Trinity" class="project-image">
             </div>
             <div class="project-details">
                 <h3 class="project-title">Shree Mahalkshmi Trinity</h3>
@@ -89,7 +89,7 @@
                     <span class="project-location-icon">📍</span> Mahim West
                 </div>
                 <hr class="project-separator">
-                <p>Current Status: Upcomming Projects</p>
+                <p>Current Status: Excavation & Piling</p>
                 <br>
                 <div class="project-buttons">
                      <a href="{{ url_for('trinity_project') }}" class="view-details-btn">View Project Details</a>
