--- a/templates/index.html
+++ b/templates/index.html
@@ -86,18 +86,8 @@
                         <a href="{{ url_for('Sumitra_project') }}" class="project-link">
                             <div class="project">
                                 <img src="{{ url_for('static', filename='projects/sumitra/Sumitra_profile.png') }}" alt="Shree Sumitra Apartments">
-                                <h3>Shree Sumitra Apartments</h3>
+                                <h3>Shree Sumitra<br> Apartments</h3>
                                 <p>Malad West</p>
-                            </div>
-                        </a>
-                    </div>
-<!--Kunj-->
-                       <div class="project">
-                        <a href="{{ url_for('maha_kunj_project') }}" class="project-link">
-                            <div class="project">
-                                <img src="{{ url_for('static', filename='projects/maha_kunj/1.png') }}" alt="Shree Sumitra Apartments">
-                                <h3>Shree Mahalakshmi Kunj</h3>
-                                <p>Vile Parle East</p>
                             </div>
                         </a>
                     </div>
@@ -107,31 +97,41 @@
                             <div class="project">
                                 <img src="{{ url_for('static', filename='projects/maha_res/3.png') }}" alt="Shree Sumitra Apartments">
                                     <h3>Shree Mahalakshmi<br>Residency</h3>
-                                <p>Vile Parle</p>
+                                <p>Mahim West</p>
                             </div>
                         </a>
                     </div>
-
-
-
-                        <div class="project">
-                        <a href="{{ url_for('Sumitra_project') }}" class="project-link">
+<!--Kunj-->
+                       <div class="project">
+                        <a href="{{ url_for('maha_kunj_project') }}" class="project-link">
                             <div class="project">
-                                <img src="{{ url_for('static', filename='projects/sumitra/Sumitra_profile.png') }}" alt="Shree Sumitra Apartments">
-                                <h3>Shree Sumitra Apartments</h3>
-                                <p>Malad West</p>
+                                <img src="{{ url_for('static', filename='projects/maha_kunj/1.png') }}" alt="Shree Mahalakshmi Kunj">
+                                <h3>Shree Mahalakshmi <br>Kunj</h3>
+                                <p>Vile Parle East</p>
                             </div>
                         </a>
                     </div>
-                        <div class="project">
-                        <a href="{{ url_for('Sumitra_project') }}" class="project-link">
+<!--Trinity-->
+                       <div class="project">
+                        <a href="{{ url_for('trinity_project') }}" class="project-link">
                             <div class="project">
-                                <img src="{{ url_for('static', filename='projects/sumitra/Sumitra_profile.png') }}" alt="Shree Sumitra Apartments">
-                                <h3>Shree Sumitra Apartments</h3>
-                                <p>Malad West</p>
+                            <img src="{{ url_for('static', filename='projects/trinity/resizw.svg') }}"alt="Shree Mahalkshmi Trinity"/>
+                                <h3>Shree Mahalkshmi<br>Trinity</h3>
+                                <p>Mahim West</p>
                             </div>
                         </a>
                     </div>
+<!--Saburi-->
+                       <div class="project">
+                        <a href="{{ url_for('saburi_project') }}" class="project-link">
+                            <div class="project">
+                            <img src="{{ url_for('static', filename='projects/saburi/2.png') }}" alt="Shree Mahalakshmi Saburi"/>
+                                <h3>Shree Mahalakshmi <br>Saburi</h3>
+                                <p>Santacruz East</p>
+                            </div>
+                        </a>
+                    </div>
+
                     <!-- Add more project items here -->
                 </div>
             </div>
@@ -308,6 +308,24 @@
                     <p>Mahim West</p>
                 </div>
             </a>
+
+
+             <a href="{{ url_for('trinity_project') }}" class="mobile-project-link">
+                <div class="mobile-project">
+                    <img src="{{ url_for('static', filename='projects/trinity/resizw.svg') }}" alt="Project 3">
+                    <h3>Shree Mahalkshmi Trinity</h3>
+                    <p>Mahim West</p>
+                </div>
+            </a>
+
+             <a href="{{ url_for('saburi_project') }}" class="mobile-project-link">
+                <div class="mobile-project">
+                    <img src="{{ url_for('static', filename='projects/saburi/2.png') }}" alt="Project 3">
+                    <h3>Shree Mahalakshmi Saburi</h3>
+                    <p>Mahim West</p>
+                </div>
+            </a>
+
 
         </div>
     </div>
@@ -727,13 +745,12 @@
             display: flex;
             flex-direction: row;
             transition: transform 0.5s ease;
-            gap: 10px;
         }
 
         /* Individual Project Link */
         .mobile-project-link {
             flex: 0 0 100%; /* Display only one project at a time */
-            /*max-width: 90%; !* Limit the width for better visual balance *!*/
+            max-width: 100%; /* Limit the width for better visual balance */
             text-decoration: none;
             color: inherit;
         }
@@ -776,7 +793,7 @@
         display: flex;
         flex-direction: row;
         transition: transform 0.5s ease;
-        gap: 10px;
+        gap: 0;
         width: 100%; /* Ensure the carousel fits within the container */
     }
 
@@ -1040,11 +1057,12 @@
 
         // Calculate the new index and apply boundaries
         mobileCurrentIndex += direction;
-        if (mobileCurrentIndex < 0) {
-            mobileCurrentIndex = 0; // Stay at the first slide
+              if (mobileCurrentIndex < 0) {
+            mobileCurrentIndex = projectCount - 1;
         } else if (mobileCurrentIndex >= projectCount) {
-            mobileCurrentIndex = projectCount - 1; // Stay at the last slide
+            mobileCurrentIndex = 0;
         }
+
 
         // Calculate the new translation
         const newTransform = -mobileCurrentIndex * 100;
