--- a/templates/projects/Sumitra.html
+++ b/templates/projects/Sumitra.html
@@ -666,12 +666,7 @@
 
     <section class="map-section">
         <div class="map-container">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1887.2!2d72.8413!3d19.0368!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMTnCsDAyJzEyLjQiTiA3MsKwNTAnMjguNyJF!5e0!3m2!1sen!2sin!4v1620120000000!5m2!1sen!2sin"
-                allowfullscreen=""
-                loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d361.6409361501203!2d72.84383506574521!3d19.18587286459743!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7b7e86719e225%3A0xf7bfb2e5132dd132!2sShree%20Sumitra%20Apartments!5e0!3m2!1sen!2sin!4v1737975132867!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </section>
     <section class="emi-section">
