--- a/templates/projects/maha_res.html
+++ b/templates/projects/maha_res.html
@@ -714,7 +714,7 @@
     <section class="map-section">
         <div class="map-container">
             <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1887.2!2d72.8413!3d19.0368!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMTnCsDAyJzEyLjQiTiA3MsKwNTAnMjguNyJF!5e0!3m2!1sen!2sin!4v1620120000000!5m2!1sen!2sin"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d584.8522312915089!2d72.8416353970755!3d19.042393032128636!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c92e6fa0a2f9%3A0x4d5af61756380559!2sSoona%20Wala%20Agiary%20Ln%2C%20Mahim%2C%20Mumbai%2C%20Maharashtra%20400016!5e1!3m2!1sen!2sin!4v1737974611094!5m2!1sen!2sin"
                 allowfullscreen=""
                 loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade">
