--- a/templates/projects/maha_kunj.html
+++ b/templates/projects/maha_kunj.html
@@ -671,7 +671,7 @@
     <section class="map-section">
         <div class="map-container">
             <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1887.2!2d72.8413!3d19.0368!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMTnCsDAyJzEyLjQiTiA3MsKwNTAnMjguNyJF!5e0!3m2!1sen!2sin!4v1620120000000!5m2!1sen!2sin"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4084.1390263318094!2d72.8509466!3d19.108775199999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c9a66e6ae9bd%3A0xac0afc219b9dc35a!2sKrishnakunj%20Building!5e1!3m2!1sen!2sin!4v1738048316669!5m2!1sen!2sin"
                 allowfullscreen=""
                 loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade">
