--- a/templates/about.html
+++ b/templates/about.html
@@ -79,7 +79,7 @@ body {
     color: #c59542;
     font-weight: 600;
     margin-bottom: 20px;
-
+    text-align: justify-all;
 }
 
 .about-us-text p {
@@ -87,7 +87,7 @@ body {
     color: #555;
     max-width: 800px;
     margin: 0 auto;
-    text-align: center;
+    text-align: justify;
 }
 
 /* Vision & Mission Section */
@@ -127,6 +127,7 @@ body {
     max-width: 800px;
     margin: 0 auto;
     margin-bottom: 20px;
+    text-align: justify;
 }
 
 /* Leadership Section */
@@ -159,6 +160,7 @@ body {
     max-width: 800px;
     margin: 0 auto;
     margin-bottom: 20px;
+    text-align: justify;
 }
 
 /* Management Section */
@@ -238,6 +240,7 @@ body {
     font-size: 1em;
     color: #555;
     margin: 0;
+    text-align: justify;
 }
 
 .management-footer-image {
