--- a/templates/projects/saburi.html
+++ b/templates/projects/saburi.html
@@ -661,7 +661,7 @@
     <section class="map-section">
         <div class="map-container">
             <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1887.2!2d72.8413!3d19.0368!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMTnCsDAyJzEyLjQiTiA3MsKwNTAnMjguNyJF!5e0!3m2!1sen!2sin!4v1620120000000!5m2!1sen!2sin"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d942.6570904513768!2d72.84843040098582!3d19.08007070350205!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c9004ede6167%3A0xfe75e9b0f626b7d2!2sElanza%20CHS!5e0!3m2!1sen!2sin!4v1740833465658!5m2!1sen!2sin"
                 allowfullscreen=""
                 loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade">
