--- a/templates/index.html
+++ b/templates/index.html
@@ -322,7 +322,7 @@
                 <div class="mobile-project">
                     <img src="{{ url_for('static', filename='projects/saburi/2.png') }}" alt="Project 3">
                     <h3>Shree Mahalakshmi Saburi</h3>
-                    <p>Mahim West</p>
+                    <p>Santacruz East</p>
                 </div>
             </a>
 
